--- a/ecommerce-ui/src/Components/Cart/CartCard.css
+++ b/ecommerce-ui/src/Components/Cart/CartCard.css
@@ -1,22 +1,29 @@
 .cart-card {
   display: flex;
+  padding: 30px 0;
+  border-bottom: 1px solid var(--grey);
+  justify-content: space-between;
 }
 
 .cart-card__image {
   margin-right: 20px;
-  width: 300px;
+  width: 160px;
   flex: 0 1 2em;
 }
 
 .cart-card__details {
   display: flex;
   margin-bottom: 20px;
-  flex: 1 1 4em;
 }
 
+.cart-card__title {
+  margin: 0;
+}
 .cart-card__info {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  flex: 0 1 30em;
 }
 
 .cart-card__button {
@@ -24,8 +31,7 @@
 }
 
 .cart-card__cost {
-  border: 1px solid var(--red);
-  background-color: var(--green);
+  border: 1px solid var(--grey);
   border-radius: 4px;
   padding: 10px;
   font-weight: bold;
