--- a/ecommerce-ui/src/Components/Home.css
+++ b/ecommerce-ui/src/Components/Home.css
@@ -26,6 +26,7 @@
 .carousel--container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .carousel--container > * {
