--- a/ecommerce-ui/src/Components/Property/PropertySummaryCard.css
+++ b/ecommerce-ui/src/Components/Property/PropertySummaryCard.css
@@ -1,4 +1,5 @@
 .property-card__container {
+  flex-grow: 0;
 }
 
 .property-card__container--medium {
